# practice-automation-ui-selenium

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml  requirements.txt  run_tests.py
.github/workflows/: ci.yml
pages/: accordions_page.py  ads_page.py  base_page.py  broken_images_page.py  broken_links_page.py  calendar_page.py  click_events_page.py  file_download_page.py  file_upload_page.py  form_fields_page.py  gestures_page.py  hover_page.py  iframes_page.py  js_delays_page.py  main_page.py  modals_page.py  popups_page.py  slider_page.py  spinners_page.py  tables_page.py  window_operations_page.py
references/: bug-popup-maker-modals-unreachable.md  bug_calendar_date_range.md  bug_comma_as_decimal_separator.md  bug_integer_instead_of_float_population.md  bug_outdated_source_data_comparison.md  bug_required_indicator_static.md  bug_special_chars_in_visible_text.md  sort_ux_flaw_ranking_column.md
tests/: conftest.py  test_accordions.py  test_ads.py  test_broken_images.py  test_broken_links.py  test_calendars.py  test_click_events.py  test_file_download.py  test_file_upload.py  test_form_fields.py  test_gestures.py  test_hover.py  test_iframes.py  test_js_delays.py  test_modals.py  test_popups.py  test_slider.py  test_spinners.py  test_tables.py  test_window_operations.py
upload_test_data/: test.txt
